Realizando peticiones a undesplash

--- a/index.html
+++ b/index.html
@@ -20,7 +20,8 @@
         <button class="btn-buscador">Buscar</button>
       </div>
     </header>
-    <main></main>
+    <main class="main">
+    </main>
     <script src="assets/js/app.js"></script>
   </body>
 </html>
