Finalizando estilo y logica

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="assets/css/normalize.css">
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <link rel="stylesheet" href="assets/css/normalize.css" />
+    <link rel="stylesheet" href="assets/css/styles.css" />
   </head>
   <body>
     <header>
@@ -19,7 +19,13 @@
       </div>
     </header>
     <main class="main">
+      <div class="spinner hidden"></div>
     </main>
+    <div class="pagination">
+      <button class="btn-anterior" disabled>Anterior</button>
+      <button class="btn-siguiente">Siguiente</button>
+    </div>
+
     <script src="assets/js/app.js"></script>
   </body>
 </html>
